--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,17 @@
+*.o
+*.tar.gz
 .#*
+.*.swp
+.deps
+Makefile
+Makefile.in
 aclocal.m4
 autom4te.cache
 config.*
 configure
-Makefile
-.*.swp
+depcomp
+install-sh
+missing
+stamp-h1
 xmonad-log-applet
 xmonad-log-applet.server
