--- a/configure.ac
+++ b/configure.ac
@@ -15,6 +15,8 @@ PKG_CHECK_MODULES(DBUS_GLIB, dbus-glib-1 >= 0.80)
 PKG_CHECK_MODULES(LIBPANEL, libpanelapplet-2.0 >= 2.26.0)
 PKG_CHECK_MODULES(GCONF, gconf-2.0 >= 2.26.0)
 
+AM_GCONF_SOURCE_2
+
 AC_CONFIG_FILES([Makefile])
 
 AC_OUTPUT
