--- a/org.gnome.panel.applet.XmonadLogAppletFactory.service.in
+++ b/org.gnome.panel.applet.XmonadLogAppletFactory.service.in
@@ -1,3 +1,3 @@
 [D-BUS Service]
-Name=org.xmonad.XmonadLogAppletFactory
+Name=org.gnome.panel.applet.XmonadLogAppletFactory
 Exec=@LIBEXECDIR@/xmonad-log-applet
