--- a/org.gnome.panel.XmonadLogApplet.panel-applet.in
+++ b/org.gnome.panel.XmonadLogApplet.panel-applet.in
@@ -7,5 +7,5 @@ Description=Factory for the xmonad-log-applet
 [XmonadLogApplet]
 Name=Xmonad Log Applet
 Description=Monitor your Xmonad log
-Icon=xmonad
+Icon=xmonad-log-applet
 BonoboId=OAFIID:XmonadLogApplet
