--- a/xmonad-log-applet.desktop.in
+++ b/xmonad-log-applet.desktop.in
@@ -3,6 +3,6 @@ Type=X-XFCE-PanelPlugin
 Name=Xmonad Log Applet
 Comment=Monitor your Xmonad log
 Icon=xmonad-log-applet
-X-XFCE-Exec=@LIBEXECDIR@/xmonad-log-applet
+X-XFCE-Exec=@PLUGIN_DIR@/xmonad-log-applet
 X-XFCE-Unique=false
 X-XFCE-Internal=false
