--- a/org.gnome.panel.XmonadLogApplet.panel-applet.in
+++ b/org.gnome.panel.XmonadLogApplet.panel-applet.in
@@ -1,6 +1,6 @@
 [Applet Factory]
 Id=XmonadLogAppletFactory
-Location=@LIBEXECDIR@/xmonad-log-applet
+Location=@PLUGIN_DIR@/xmonad-log-applet
 Name=Xmonad Log Factory
 Description=Factory for the xmonad-log-applet
 
