--- a/org.gnome.panel.applet.XmonadLogAppletFactory.service.in
+++ b/org.gnome.panel.applet.XmonadLogAppletFactory.service.in
@@ -1,3 +1,3 @@
 [D-BUS Service]
 Name=org.gnome.panel.applet.XmonadLogAppletFactory
-Exec=@LIBEXECDIR@/xmonad-log-applet
+Exec=@PLUGIN_DIR@/xmonad-log-applet
