thought I saved that...

--- a/Makefile.am
+++ b/Makefile.am
@@ -25,7 +25,7 @@ $(applet_files): $(applet_files:.desktop=.desktop.in)
 else
 if PANEL_MATE
 applet_files = org.mate.panel.XmonadLogApplet.mate-panel-applet
-$(applet_files): $(applet_files:.panel-applet=.mate-panel-applet.in)
+$(applet_files): $(applet_files:.mate-panel-applet=.mate-panel-applet.in)
 	$(SED) -e "s|\@PLUGIN_DIR\@|$(PLUGIN_DIR)|" $< > $@
 else
 applet_files = org.gnome.panel.XmonadLogApplet.panel-applet
