Parse the dbus msg, display window icons

--- a/Makefile.am
+++ b/Makefile.am
@@ -6,12 +6,14 @@ xmonad_log_applet_SOURCES = main.c
 xmonad_log_applet_CPPFLAGS = \
 	$(GLIB_CFLAGS) \
 	$(DBUS_GLIB_CFLAGS) \
-	$(LIBPANEL_CFLAGS)
+	$(LIBPANEL_CFLAGS) \
+	$(XCB_CFLAGS)
 
 xmonad_log_applet_LDADD = \
 	$(GLIB_LIBS) \
 	$(DBUS_GLIB_LIBS) \
-	$(LIBPANEL_LIBS)
+	$(LIBPANEL_LIBS) \
+	$(XCB_LIBS)
 
 appletdir = $(LIBPANEL_APPLET_DIR)
 if PANEL_GNOME
