Add support for in-process applet
In-process applet is needed for libpanel-applet >= 3.22. The
out-of-process applets are no long supported:

https://github.com/GNOME/gnome-panel/commit/672eb2a8ddaf9a4665320364caa021e3d2e6f463

This conditionally compiles the code based on libpanel-applet version.
Also removes some parts of the code that are no longer supported (i.e.
`panel_applet_set_background_widget()`)

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,8 +1,39 @@
 plugindir = $(PLUGIN_DIR)
+
+if PANEL_GNOME_IN_PROC
+
+xmonad_log_appletdir = $(libdir)/gnome-panel/modules
+PLUGIN_DIR_ = $(libdir)/gnome-panel/modules
+xmonad_log_applet_LTLIBRARIES = libxmonad-log-applet.la
+PLUGIN_FILE = libxmonad-log-applet.la
+IN_PROC_STR = "InProcess=true"
+
+libxmonad_log_applet_la_SOURCES = main.c
+libxmonad_log_applet_la_CPPFLAGS = \
+	$(GLIB_CFLAGS) \
+	$(DBUS_GLIB_CFLAGS) \
+	$(LIBPANEL_CFLAGS) \
+	$(XCB_CFLAGS)
+
+libxmonad_log_applet_la_LIBADD = \
+	$(GLIB_LIBS) \
+	$(DBUS_GLIB_LIBS) \
+	$(LIBPANEL_LIBS) \
+	$(XCB_LIBS)
+
+libxmonad_log_applet_la_LDFLAGS = \
+	-module -avoid-version \
+	$(WARN_LDFLAGS) \
+	$(AM_LDFLAGS) \
+	$(XCB_LDFLAGS)
+
+else
+
 plugin_PROGRAMS = xmonad-log-applet
+PLUGIN_DIR_ = $(PLUGIN_DIR)
+PLUGIN_FILE = xmonad-log-applet
 
 xmonad_log_applet_SOURCES = main.c
-
 xmonad_log_applet_CPPFLAGS = \
 	$(GLIB_CFLAGS) \
 	$(DBUS_GLIB_CFLAGS) \
@@ -15,21 +46,29 @@ xmonad_log_applet_LDADD = \
 	$(LIBPANEL_LIBS) \
 	$(XCB_LIBS)
 
+endif
+
 appletdir = $(LIBPANEL_APPLET_DIR)
 if PANEL_GNOME
 applet_files = org.gnome.panel.XmonadLogApplet.panel-applet
 $(applet_files): $(applet_files:.panel-applet=.panel-applet.in)
-	$(SED) -e "s|\@PLUGIN_DIR\@|$(PLUGIN_DIR)|" $< > $@
+	$(SED) -e "s|\@PLUGIN_DIR\@|$(PLUGIN_DIR_)|" \
+		   -e "s|\@PLUGIN_FILE\@|$(PLUGIN_FILE)|" \
+		   -e "s|\@IN_PROC\@|$(IN_PROC_STR)|" $< > $@
 endif
 if PANEL_MATE
 applet_files = org.mate.panel.XmonadLogApplet.mate-panel-applet
 $(applet_files): $(applet_files:.mate-panel-applet=.mate-panel-applet.in)
-	$(SED) -e "s|\@PLUGIN_DIR\@|$(PLUGIN_DIR)|" $< > $@
+	$(SED) -e "s|\@PLUGIN_DIR\@|$(PLUGIN_DIR_)|" \
+		   -e "s|\@PLUGIN_FILE\@|$(PLUGIN_FILE)|" \
+		   -e "s|\@IN_PROC\@|$(IN_PROC_STR)|" $< > $@
 endif
 if PANEL_XFCE4
 applet_files = xmonad-log-applet.desktop
 $(applet_files): $(applet_files:.desktop=.desktop.in)
-	$(SED) -e "s|\@PLUGIN_DIR\@|$(PLUGIN_DIR)|" $< > $@
+	$(SED) -e "s|\@PLUGIN_DIR\@|$(PLUGIN_DIR)|" \
+		   -e "s|\@PLUGIN_FILE\@|$(PLUGIN_FILE)|" \
+		   -e "s|\@IN_PROC\@|$(IN_PROC_STR)|" $< > $@
 endif
 
 applet_DATA = $(applet_files)
